--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "An automatic job application bot",
   "main": "index.js",
+   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+    "dependencies": {
+    "dotenv": "^16.0.3",
+    "node-fetch": "^2.6.7",
+    "puppeteer": "^22.8.2"
   },
   "keywords": [],
   "author": "",
