--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "An automatic job application bot",
   "main": "index.js",
-   "type": "commonjs",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node src/index.js"
+    "start": "node src/index.js"
   },
-    "dependencies": {
+  "dependencies": {
     "dotenv": "^16.0.3",
     "node-fetch": "^2.6.7",
-    "puppeteer": "^22.8.2"
+    "puppeteer": "^22.8.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "keywords": [],
   "author": "",
