--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "dotenv": "^16.0.3",
     "node-fetch": "^2.6.7",
+    "proxy-chain": "^2.5.9",
     "puppeteer": "^22.8.2",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "random-useragent": "^0.5.0"
   },
   "keywords": [],
   "author": "",
